--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!doctype html>
+<!--GitHub:https://github.com/coder-carl/CarlHTML.git-->
 <html>
-	
-
-	
 	
 <head>
 <!--全部超链接都是重新打开网页(base=基地)-->
@@ -13,8 +11,6 @@
 <title>MineCarl官网</title>
 </head>
 
-	
-	
 <body>
 	<!--大标题-->
 	<!---双标签""--->
@@ -32,7 +28,7 @@
 	
 	<!--字体倾斜-->
 	<e>MineCarl斜体</e> 
-	*
+	
 	<!--换行-->
 	<br/>
 	
@@ -58,10 +54,11 @@
 	<img src="images/cw.jpg" title="双引号错误" alt="双引号错误" />
 	
 	<br>
-	<!--超链接学习课程,网页跳转(href=跳转目标 , target=属性值 , _blank=新窗口跳转网页 , _self=替换当前网页跳转网页)-->
+	<!--超链接学习课程,网页跳转(href=跳转目标 , target=新窗口 , _blank=新窗口跳转网页 , _self=替换当前网页跳转网页)-->
 	<a href="https://www.baidu.com" target="_self">百度</a><br>
-	<!--Google网站无法进行"_self"操作,具体原因(可能是因为阻挡国内访问)-->
-	<a href="https://www.google.com" target="_blank">谷歌</a>
+	<!--Google网站无法进行"_self"操作,具体原因(可能是因为阻挡国内访问)<网站的"https://"一定不要掉,否在打不开网站>-->
+	<a href="https://www.google.com" target="_blank">谷歌</a><br>
+	<a href="dgx.html" target="_blank">短歌行</a><br>
 	
 </body>
 
