--- a/index.html
+++ b/index.html
@@ -13,52 +13,52 @@
 
 <body>
 	<!--大标题-->
-	<!---双标签""--->
-	<h1>HTML学习之路</h1>
+	<!---双标签(<center></center>文字居中标签)--->
+	<h1><center>HTML学习之路</center></h1>
 	
 	<!--分界线-->
 	<!---单标签""--->
 	<hr/>
 	
 	<!--字体加粗-->
-	<b>图片文件夹="images"</b>
+	<b><center>图片文件夹="images"</center></b>
 	
 	<!--换行-->
 	<br/>
 	
 	<!--字体倾斜-->
-	<e>MineCarl斜体</e> 
+	<e><center>"center"文字居中标签</center></e> 
 	
 	<!--换行-->
 	<br/>
 	
 	<!--字体删除-->
-	<s>MineCarl删除</s>
+	<s><center>(hr=分界线,br=换行 快捷键Shift+Enter)</center></s>
 	
 	<!--换行-->
 	<br/>
 	
 	<!--字体下划-->
-	<u>MineCarl下划</u>
+	<u><center>(src=文件路径 , width=像素宽 , height=像素高 , title=标签 , alt=文本提示 , border=边框 ../=上一级目录)</center></u>
 	
 	<!--换行-->
 	<br/>
 	
 	<!--图片添加,尺寸调整,替代文本  (src=文件路径 , width=像素宽 , height=像素高 , title=标签 , alt=文本提示 , border=边框 ../=上一级目录)-->
-	<img src="images/bg.png" width="600" height="400" title="背景" alt="背景" border="50" />
+	<center><img src="images/bg.png" width="600" height="400" title="背景" alt="背景" border="30" /></center>
 	
 	<!--换行(<br>不用加"/")<快捷键Shift+Enter>-->
 	<br/>
 	
 	<!--DW报错提示-->
-	<img src="images/cw.jpg" title="双引号错误" alt="双引号错误" />
+	<center><img src="images/cw.jpg" title="双引号错误" alt="双引号错误" /></center>
 	
 	<br>
 	<!--超链接学习课程,网页跳转(href=跳转目标 , target=新窗口 , _blank=新窗口跳转网页 , _self=替换当前网页跳转网页)-->
-	<a href="https://www.baidu.com" target="_self">百度</a><br>
+	<center><a href="https://www.baidu.com" target="_self">百度</a></center><br>
 	<!--Google网站无法进行"_self"操作,具体原因(可能是因为阻挡国内访问)<网站的"https://"一定不要掉,否在打不开网站>-->
-	<a href="https://www.google.com" target="_blank">谷歌</a><br>
-	<a href="dgx.html" target="_blank">短歌行</a><br>
+	<center><a href="https://www.google.com" target="_blank">谷歌</a></center><br>
+	<center><a href="dgx.html" target="_blank">短歌行</a></center><br>
 	
 </body>
 
