--- a/index.html
+++ b/index.html
@@ -13,56 +13,76 @@
 
 <body>
 	<!--大标题-->
+	<h1><center><font face="verdana">HTML5</font></center></h1>
+	<center><p>学习笔记</p></center>
 	<!---双标签(<center></center>文字居中标签)--->
-	<h1><center>HTML学习之路</center></h1>
-	
 	<!--分界线-->
 	<!---单标签""--->
-	<hr/>
+<hr/>
+		
+	<!--颜色 <font>-->
+<center>
+	<p><b>\\\必默骨架///</b></p>
+	<p><code><font color="#03a20e">&lt;HTML&gt;</font></code><br>
+    <code><font color="#03a20e">&lt;head&gt;</font></code><br>
+    <code><font color="#03a20e">&lt;title&gt;&lt;/title&gt;</font></code><br>
+    <code><font color="#03a20e">&lt;/head&gt;</font></code><br>
+    <code><font color="#03a20e">&lt;body&gt;</font></code><br>
+    <code><font color="#03a20e">&lt;/body&gt;</font></code><br>
+    <code><font color="#03a20e">&lt;/HTML&gt;</font></code><br>
+</p>
+</center>
 	
-	<!--字体加粗-->
-	<b><center>图片文件夹="images"</center></b>
+<br>
+<br>
 	
-	<!--换行-->
-	<br/>
+<center>
+	<p><b>\\\常用标签///</b></p>
+<code>
+	<p>段落标签-----------<font color="#03a20e">&lt;p&gt;#&lt;/p&gt; </font></p>
+	<p>居中标签-----------<font color="#03a20e">&lt;center&gt;#&lt;/center&gt; </font></p>
+	<p>文字超链接-----------<font color="#03a20e">&lt;a href=&quot;#&quot;&gt; </font></p>
+	<p>图片插入-----------<font color="#03a20e">&lt;img src=&quot;目录&quot; &gt; </font></p>
+</code>
+</center>
+
+<br>
+<br>
+
+<center>
+	<p><b>\\\特殊符号///</b></p>
+<code>
+	<p>空格-----------&amp;nbsp;</p>
+	<p>&lt;-----------&amp;lt;</p>
+	<p>&gt;----------- &amp;gt;</p>     
+	<p>&amp;----------- &amp;amp;</p>     
+	<p>&copy;-----------&amp;copy;</p>     
+</code>
+</center>
+
+<br>
+<br>
+
+<center>
+	<p><b>\\\常用代码///</b></p>
+<code>
+	<p>图片超链接-----------<font color="#03a20e">&lt;a herf=&quot;https://www.baidu.com&quot; &gt;&lt;img scr=&quot;images/1.png&quot; &gt;&lt;/a&gt;</font></p>
+</code>
+	<a herf="https://www.baidu.com" ><img src="images/bg.png" target="_blank"  width="300" height="200" title="背景" alt="背景" ></a>
+<code>
+	<p>快速定位-----------<font color="#03a20e">&lt;p id=&quot;id&quot;&gt;文字&lt;/p&gt;//////&lt;a href=&quot;#id&quot; &gt;文字&lt;/p&gt;</font></font></p>
+</code>
+</center>
+
 	
-	<!--字体倾斜-->
-	<e><center>"center"文字居中标签</center></e> 
+<hr/>
 	
-	<!--换行-->
-	<br/>
 	
-	<!--字体删除-->
-	<s><center>(hr=分界线,br=换行 快捷键Shift+Enter)</center></s>
-	
-	<!--换行-->
-	<br/>
-	
-	<!--字体下划-->
-	<u><center>(src=文件路径 , width=像素宽 , height=像素高 , title=标签 , alt=文本提示 , border=边框 ../=上一级目录)</center></u>
-	
-	<!--换行-->
-	<br/>
-	
-	<!--图片添加,尺寸调整,替代文本  (src=文件路径 , width=像素宽 , height=像素高 , title=标签 , alt=文本提示 , border=边框 ../=上一级目录)-->
-	<center><img src="images/bg.png" width="600" height="400" title="背景" alt="背景" border="30" /></center>
-	
-	<!--换行(<br>不用加"/")<快捷键Shift+Enter>-->
-	<br/>
-	
-	<!--DW报错提示-->
-	<center><img src="images/cw.jpg" title="双引号错误" alt="双引号错误" /></center>
-	
-	<br>
-	<!--超链接学习课程,网页跳转(href=跳转目标 , target=新窗口 , _blank=新窗口跳转网页 , _self=替换当前网页跳转网页)-->
-	<center><a href="https://www.baidu.com" target="_self">百度</a></center><br>
-	<!--Google网站无法进行"_self"操作,具体原因(可能是因为阻挡国内访问)<网站的"https://"一定不要掉,否在打不开网站>-->
-	<center><a href="https://www.google.com" target="_blank">谷歌</a></center><br>
-	<center><a href="dgx.html" target="_blank">短歌行</a></center><br>
+<center>
+	<b><font size="3" face="arial" color="red"><a href="dgx.html" trager="_blank" style="color:royalblue;text-decoration:none;">短歌行</a></font></b>
+	<b><font size="3" face="arial" color="red"><a href="ggxs.html" trager="_blank" style="color:royalblue;text-decoration:none;">搞怪小说</a></font></b>
+	<b><font size="3" face="arial" color="red"><a href="baidu.html" trager="_blank" style="color:royalblue;text-decoration:none;">文章定位</a></font></b>
+</center>
 	
 </body>
-
-
-
-
 </html>
