--- a/index.html
+++ b/index.html
@@ -70,13 +70,26 @@
 </code>
 	<a herf="https://www.baidu.com" ><img src="images/bg.png" target="_blank"  width="300" height="200" title="背景" alt="背景" ></a>
 <code>
-	<p>快速定位-----------<font color="#03a20e">&lt;p id=&quot;id&quot;&gt;文字&lt;/p&gt;//////&lt;a href=&quot;#id&quot; &gt;文字&lt;/p&gt;</font></font></p>
+	<p>快速定位-----------<font color="#03a20e">&lt;p id=&quot;id&quot;&gt;文字&lt;/p&gt;//////&lt;a href=&quot;#id&quot; &gt;文字&lt;/p&gt;</font></p>
 </code>
 </center>
 
-	
+<br>
+<br>
+
+<center>
+	<p><b>\\\英文单词///</b></p>
+<code>
+	<p>index-----------网页文件名</p>
+	<p>html-----------网页后缀名</p>   
+</code>
+</center>
 <hr/>
 	
+<center>	
+	<p><a href="mailto:648444118@qq.com" trager="_blank" style="color:royalblue;text-decoration:none;">电子邮件</a>&nbsp;&nbsp;&nbsp;&nbsp;
+	<a href="tencent://Message/?Uin=648444118" trager="_blank" style="color:royalblue;text-decoration:none;">腾讯企鹅</a></p>
+</center>
 	
 <center>
 	<b><font size="3" face="arial" color="red"><a href="dgx.html" trager="_blank" style="color:royalblue;text-decoration:none;">短歌行</a></font></b>
@@ -84,5 +97,6 @@
 	<b><font size="3" face="arial" color="red"><a href="baidu.html" trager="_blank" style="color:royalblue;text-decoration:none;">文章定位</a></font></b>
 </center>
 	
+
 </body>
 </html>
