--- a/goggl.html
+++ b/goggl.html
@@ -6,6 +6,11 @@
 </head>
 
 <body>
-	<a href="https://www.google.com" target="_blank" ><center><img src="images/gg.jpg" width="1280" height="600" ></center></a>
+	<a href="https://www.google.com" target="_blank" ><center><img src="images/gg.jpg" width="484" height="184" ></center></a>
+	<ol type="I">
+	<li>华为</li>
+	<li>苹果</li>
+	<li>小米</li>
+	</ol>
 </body>
 </html>
