--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 <center>
 	<p><b>\\\常用标签///</b></p>
 <code>
-	<p>段落标签-----------<font color="#03a20e">&lt;p&gt;#&lt;/p&gt; </font></p>
-	<p>居中标签-----------<font color="#03a20e">&lt;center&gt;#&lt;/center&gt; </font></p>
-	<p>文字超链接-----------<font color="#03a20e">&lt;a href=&quot;#&quot;&gt; </font></p>
+  <p>段落标签-----------<font color="#03a20e">&lt;p&gt;#&lt;/p&gt; </font></p>
+  <p>居中对齐-----------<font color="#03a20e">&lt;center&gt;#&lt;/center&gt;</font></p>
+  <p>文字超链接-----------<font color="#03a20e">&lt;a href=&quot;#&quot;&gt; </font></p>
 	<p>图片插入-----------<font color="#03a20e">&lt;img src=&quot;目录&quot; &gt; </font></p>
 </code>
 </center>
@@ -59,7 +59,7 @@
 	<p>&copy;-----------&amp;copy;</p>     
 </code>
 </center>
-
+	
 <br>
 <br>
 
@@ -68,7 +68,7 @@
 <code>
 	<p>图片超链接-----------<font color="#03a20e">&lt;a herf=&quot;https://www.baidu.com&quot; &gt;&lt;img scr=&quot;images/1.png&quot; &gt;&lt;/a&gt;</font></p>
 </code>
-	<a herf="https://www.baidu.com" ><img src="images/bg.png" target="_blank"  width="300" height="200" title="背景" alt="背景" ></a>
+	<a herf="https://www.baidu.com" ><img src="images/bg.png" alt="背景"  width="300" height="200" title="背景" target="_blank" " ></a>
 <code>
 	<p>快速定位-----------<font color="#03a20e">&lt;p id=&quot;id&quot;&gt;文字&lt;/p&gt;//////&lt;a href=&quot;#id&quot; &gt;文字&lt;/p&gt;</font></p>
 </code>
