--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <code>
 	<p>图片超链接-----------<font color="#03a20e">&lt;a herf=&quot;https://www.baidu.com&quot; &gt;&lt;img scr=&quot;images/1.png&quot; &gt;&lt;/a&gt;</font></p>
 </code>
-	<a herf="https://www.baidu.com" ><img src="images/bg.png" alt="背景"  width="300" height="200" title="背景" target="_blank" " ></a>
+	<a herf="https://www.baidu.com" ><img src="images/bg.png" alt="背景"  width="300" height="200" title="背景" target="_blank" ></a>
 <code>
 	<p>快速定位-----------<font color="#03a20e">&lt;p id=&quot;id&quot;&gt;文字&lt;/p&gt;//////&lt;a href=&quot;#id&quot; &gt;文字&lt;/p&gt;</font></p>
 </code>
@@ -84,6 +84,17 @@
 	<p>html-----------网页后缀名</p>   
 </code>
 </center>
+	
+<br>
+<br>
+	
+<center>
+	<p><b>\\\表格学习///</b></p>
+<code>
+	<p>table-----------代码写到这个标签内</p>
+	<p>html-----------网页后缀名</p>   
+</code>
+</center>
 <hr/>
 	
 <center>	
@@ -95,6 +106,7 @@
 	<b><font size="3" face="arial" color="red"><a href="dgx.html" trager="_blank" style="color:royalblue;text-decoration:none;">短歌行</a></font></b>
 	<b><font size="3" face="arial" color="red"><a href="ggxs.html" trager="_blank" style="color:royalblue;text-decoration:none;">搞怪小说</a></font></b>
 	<b><font size="3" face="arial" color="red"><a href="baidu.html" trager="_blank" style="color:royalblue;text-decoration:none;">文章定位</a></font></b>
+	<b><font size="3" face="arial" color="red"><a href="biaoge.html" trager="_blank" style="color:royalblue;text-decoration:none;">当当图书</a></font></b>
 </center>
 	
 
