--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 	<b><font size="3" face="arial" color="red"><a href="ggxs.html" trager="_blank" style="color:royalblue;text-decoration:none;">搞怪小说</a></font></b>
 	<b><font size="3" face="arial" color="red"><a href="baidu.html" trager="_blank" style="color:royalblue;text-decoration:none;">文章定位</a></font></b>
 	<b><font size="3" face="arial" color="red"><a href="biaoge.html" trager="_blank" style="color:royalblue;text-decoration:none;">当当图书</a></font></b>
+	<b><font size="3" face="arial" color="red"><a href="jdgaofang.html" trager="_blank" style="color:royalblue;text-decoration:none;">低配京东</a></font></b>
 </center>
 	
 
