--- a/index.html
+++ b/index.html
@@ -79,10 +79,32 @@
 
 <center>
 	<p><b>\\\英文单词///</b></p>
-<code>
-	<p>index-----------网页文件名</p>
-	<p>html-----------网页后缀名</p>   
-</code>
+
+	<p><b>第一章 网页入门</b></p>
+	<p>head-----------头部</p>
+	<p>body-----------主体</p>
+	<p>title-----------标题</p>
+	<p><b>第二章 图像与超链接</b></p>
+	<p>width-----------宽度</p>
+	<p>height-----------高度</p>
+	<p>align-----------对齐</p>
+	<p>left-----------左边的</p>
+	<p>right-----------右边的</p>
+	<p>target-----------目标</p>
+	<p>name-----------名称</p>
+	<p>self-----------自己</p>
+	<p>blank-----------空白</p>
+	<p>border-----------边界</p>
+	<p>source-----------来源</p>
+	<p><b>第四章 网页中的表格</b></p>
+	<p>table-----------表格</p>
+	<p>cell-----------单元</p>
+	<p>padding-----------填充</p>
+	<p>spacing-----------间隔</p>
+	<p>span-----------跨度</p>
+	<p>col-----------专栏</p>
+	<p>row-----------行</p>
+
 </center>
 	
 <br>
