--- a/index.html
+++ b/index.html
@@ -39,10 +39,20 @@
 <center>
 	<p><b>\\\常用标签///</b></p>
 <code>
-  <p>段落标签-----------<font color="#03a20e">&lt;p&gt;#&lt;/p&gt; </font></p>
-  <p>居中对齐-----------<font color="#03a20e">&lt;center&gt;#&lt;/center&gt;</font></p>
-  <p>文字超链接-----------<font color="#03a20e">&lt;a href=&quot;#&quot;&gt; </font></p>
+    <p>段落标签-----------<font color="#03a20e">&lt;p&gt;#&lt;/p&gt; </font></p>
+    <p>居中对齐-----------<font color="#03a20e">&lt;center&gt;#&lt;/center&gt;</font></p>
+    <p>文字超链接-----------<font color="#03a20e">&lt;a href=&quot;#&quot;&gt; </font></p>
 	<p>图片插入-----------<font color="#03a20e">&lt;img src=&quot;目录&quot; &gt; </font></p>
+	<p>下拉列表-----------<font color="#03a20e">&lt;select&gt;&lt;option&gt;</font></p>
+	<p>文件选择-----------<font color="#03a20e">&lt;input tupe=""  /&gt;</font></p>
+	<p>输入框-----------tetx</p>
+	<p>列表框-----------selec/option</p>
+	<p>单选框-----------radio/单选sex</p>
+	<p>密码框-----------password</p>
+	<p>多选框-----------checkbox</p>
+	<p>按钮-----------button</p>
+	<p>多文本框-----------textarea/每行文字:cols  最多列数:rows</p>
+	<p>重置标签-----------reset</p>
 </code>
 </center>
 
@@ -67,6 +77,7 @@
 	<p><b>\\\常用代码///</b></p>
 <code>
 	<p>图片超链接-----------<font color="#03a20e">&lt;a herf=&quot;https://www.baidu.com&quot; &gt;&lt;img scr=&quot;images/1.png&quot; &gt;&lt;/a&gt;</font></p>
+	<p>重置标签-----------<font color="#03a20e">&lt;form action="" method="post" name="frmRegister"&gt;</font></p>
 </code>
 	<a herf="https://www.baidu.com" ><img src="images/bg.png" alt="背景"  width="300" height="200" title="背景" target="_blank" ></a>
 <code>
@@ -130,8 +141,10 @@
 	<b><font size="3" face="arial" color="red"><a href="baidu.html" trager="_blank" style="color:royalblue;text-decoration:none;">文章定位</a></font></b>
 	<b><font size="3" face="arial" color="red"><a href="biaoge.html" trager="_blank" style="color:royalblue;text-decoration:none;">当当图书</a></font></b>
 	<b><font size="3" face="arial" color="red"><a href="jdgaofang.html" trager="_blank" style="color:royalblue;text-decoration:none;">低配京东</a></font></b>
+	<b><font size="3" face="arial" color="red"><a href="zhuceqq.html" trager="_blank" style="color:royalblue;text-decoration:none;">QQ注册</a></font></b>
 </center>
-	
+
+	<hr/>
 
 </body>
 </html>
