--- a/zhuceqq.html
+++ b/zhuceqq.html
@@ -14,6 +14,7 @@
 <td><h1>QQ注册</h1></td>
 </tr>
 </table>
+<form action="" method="post" name="frmRegister">
 <table border="0" cellpadding="0" cellspacing="0" align="center">
 	<tr>
 	<td>昵称:</td>
@@ -22,7 +23,7 @@
 
 	<tr>
 		<td>头像:</td>
-		<td><img src="images/logo.png"></td>
+		<td><img src="images/1331.png" width="64" height="64"></td>
 	</tr>
 	
 	<tr>
@@ -59,7 +60,7 @@
 
 	<tr>
 	<td>性别:</td>
-	<td><input type="radio" name="sex" >男<input type="radio" name="sex" >女</td>
+	<td><input type="radio" name="sex" checked="checked">男<input type="radio" name="sex" >女</td>
 	</tr>
 
 	<tr>
@@ -104,20 +105,20 @@
 	
 	<tr>
 	<td>验证码:</td>
-	<td><input type="text" name></td>
+	<td ><input type="text" name></td>
 	</tr>
 	
 	<tr>
 	<td>验证图片:</td>
-	<td><a href="" ><img src="images/logo.png">看不清楚?换一张</a></td>
+	<td><a href="" ><img src="images/132123.jpg" width="130" height="">看不清楚?换一张</a></td>
 	</tr>
 	
 	<tr>
 	<td>&nbsp; &nbsp;</td>
 	</tr>
 	<tr>
-	<td></td>
-	<td><input type="button" value="确定并同意以下服务条款" ></td>
+	<td ></td>
+	<td><input type="button" value="确定并同意以下服务条款" > <input type="reset" name="重置" value="重置信息"></td>
 	</tr>
 	
 </table>
