--- a/ec.html
+++ b/ec.html
@@ -2,15 +2,15 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Endless City - 无尽都市</title>
+<title>无标题文档</title>
 </head>
 
 <body>
-<center><img src="images/MC_01.jpg" width="1280" height="720" /></center>
-<center><img src="images/MC_02.jpg" width="1280" height="720" /></center><br>
-	<center><img src="images/MC_03.jpg" width="1280" height="720" /></center><br>
-	<center><img src="images/MC_04.jpg" width="1280" height="720" /></center><br>
-	<center><img src="images/MC_05.jpg" width="1280" height="720" /></center><br>
-	<center><img src="images/MC_06.jpg" width="1280" height="720" /></center><br>
+	<div>
+		<form>
+			<img src="images/MC_01.jpg"  height="968px" />
+		</form>
+	</div>
+	
 </body>
 </html>
