--- a/index.html
+++ b/index.html
@@ -9,22 +9,25 @@
 <meta charset="utf-8">
 <!--网页标题-->
 <title>MineCarl官网</title>
+<link href="css/jiemian.css" rel="stylesheet">
 </head>
 
 <body>
-	<!--大标题-->
-	<h1><center><font face="verdana">HTML5</font></center></h1>
-	<center><p>学习笔记</p></center>
-	<!---双标签(<center></center>文字居中标签)--->
-	<!--分界线-->
-	<!---单标签""--->
-<hr/>
+    <div class="bar1">
+        <form>
+        <h1><center><font face="verdana">HTML5</font></center></h1>
+		<center><p>学习笔记</p></center>
+        </form>
+    </div>
 		
 	<!--颜色 <font>-->
 <center>
 	<p><b>\\\必默骨架///</b></p>
-	<p><code><font color="#03a20e">&lt;HTML&gt;</font></code><br>
+	<p>
+	<code><font color="#03a20e">&lt;!doctype html&gt;</font></code><br>
+	<code><font color="#03a20e">&lt;HTML&gt;</font></code><br>
     <code><font color="#03a20e">&lt;head&gt;</font></code><br>
+	<code><font color="#03a20e">&lt;meta charset="utf-8"&gt;</font></code><br>
     <code><font color="#03a20e">&lt;title&gt;&lt;/title&gt;</font></code><br>
     <code><font color="#03a20e">&lt;/head&gt;</font></code><br>
     <code><font color="#03a20e">&lt;body&gt;</font></code><br>
@@ -82,6 +85,9 @@
 	<a herf="https://www.baidu.com" ><img src="images/bg.png" alt="背景"  width="300" height="200" title="背景" target="_blank" ></a>
 <code>
 	<p>快速定位-----------<font color="#03a20e">&lt;p id=&quot;id&quot;&gt;文字&lt;/p&gt;//////&lt;a href=&quot;#id&quot; &gt;文字&lt;/p&gt;</font></p>
+</code>
+<code>
+	<p>外部样式表-----------<font color="#03a20e">&lt;link href="css文件路径" rel="定义当前文档与被链接文档之间的关系"&gt;</font></p>
 </code>
 </center>
 
