--- a/zhuceqq.html
+++ b/zhuceqq.html
@@ -2,133 +2,153 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>腾讯QQ注册</title>
-<link rel="icon" type="image/x-icon" href="images/ico1.png"/>
+<title>腾讯QQ-账号注册</title>
+<link href="css/fontqq.css" rel="stylesheet" />
 </head>
 
 <body>
-<table >
-<tr>
-<td width="15"></td>
-<td><img src="images/logo.png"></td>
-<td><h1>QQ注册</h1></td>
-</tr>
-</table>
-<form action="" method="post" name="frmRegister">
-<table border="0" cellpadding="0" cellspacing="0" align="center">
+	<table width="740" align="center" border="0" cellpadding="0" cellspacing="0">
 	<tr>
-	<td>昵称:</td>
-	<td><input type="text" name></td>
+		<td align="left"><img src="images/logo.gif"></td>
+		<td align="right"><a >申请免费账号首页&nbsp;|&nbsp;反馈意见</a></td>
 	</tr>
-
+	</table>
+	<table width="740" height="1" align="center" border="0" cellpadding="0" cellspacing="0">
 	<tr>
-		<td>头像:</td>
-		<td><img src="images/1331.png" width="64" height="64"></td>
+		<td height="10" colspan="4" bgcolor="#B9E2FE"></td>
 	</tr>
+	<tr>
+		<td bgcolor="#B9E2FE" width="110">&nbsp;&nbsp;网页免费申请</td>
+		<td bgcolor="#F2FCFE" width="110">&nbsp;&nbsp;QQ靓号申请</td>
+		<td bgcolor="#F2FCFE">手机申请</td>
+	</tr>
+	<tr>
+		<td colspan="3" align="right"><img src="images/step_01.gif">填写信息<img src="images/step_02.gif">申请成功</td>
+	</tr>
+	<tr>
+		<td colspan="4" bgcolor="#F2FCFE">&nbsp;</td>
+	</tr>
+	</table>
 	
+	<br>
+	
+	<table align="center" height="700" border="0" cellpadding="0" cellspacing="0">
+	<form action="" method="post" name="frmRegister">
 	<tr>
-		<td></td>
+		<td>昵称:&nbsp;&nbsp;</td>
+		<td><input type="text" size="50"></td>
+	</tr>
+		<tr>
+		<td>头像:&nbsp;&nbsp;</td>
+		<td><img src="images/face.gif" align=""></td>
+	</tr>
+		<tr>
+		<td>&nbsp;</td>
 		<td><input type="file"></td>
 	</tr>
-	
-	<tr>
-		<td>生日:</td>
-	<td>
-	<select>
-		<option>2019</option>
-		<option>2018</option>
-		<option>2017</option>
-		<option>2016</option>
-		<option>2015</option>
-	</select>年
-	<select>
-		<option>1</option>
-		<option>2</option>
-		<option>3</option>
-		<option>4</option>
-		<option>5</option>
-	</select>月
-	<select>
-		<option>1</option>
-		<option>2</option>
-		<option>3</option>
-		<option>4</option>
-		<option>5</option>
-	</select>日
-	</td>
-	</tr>
-
-	<tr>
-	<td>性别:</td>
-	<td><input type="radio" name="sex" checked="checked">男<input type="radio" name="sex" >女</td>
-	</tr>
-
-	<tr>
-	<td>密码:</td>
-	<td><input type="password" ></td>
-	</tr>
-	
-	<tr>
-		<td></td>
-		<td>6-16个字符组成,区分大小写,不能为9位以下纯数字</td>
-	</tr>
-	
-	<tr>
-	<td>密码:</td>
-	<td><input type="password" ></td>
-	</tr>
-
-
-	
-	<tr>
-		<td>所在地:</td>
+		<tr>
+		<td>生日:&nbsp;&nbsp;</td>
 		<td>
 		<select>
-		<option>中国</option>
-		<option>美国</option>
+			<option>2019</option>
+			<option>2018</option>
+			<option>2017</option>
 		</select>
+			年
 		<select>
-		<option>北京</option>
-		<option>武汉</option>
+			<option>1</option>
+			<option>2</option>
+			<option>3</option>
 		</select>
+			月
 		<select>
-		<option>东城</option>
-		<option>芜湖</option>
+			<option>1</option>
+			<option>2</option>
+			<option>3</option>
 		</select>
+			日
 		</td>
 	</tr>
-	
-	<tr>
-	<td>爱好:</td>
-	<td><input type="checkbox">爬山<input type="checkbox">上网<input type="checkbox">读书<input type="checkbox">上课</td>
+		<tr>
+		<td>性别:&nbsp;&nbsp;</td>
+		<td><input type="radio" name="sex"  checked="checked">男<input type="radio" name="sex" >女</td>
 	</tr>
-	
-	<tr>
-	<td>验证码:</td>
-	<td ><input type="text" name></td>
+		<tr>
+		<td>密码:&nbsp;&nbsp;</td>
+		<td><input type="password" size="50"></td>
 	</tr>
-	
-	<tr>
-	<td>验证图片:</td>
-	<td><a href="" ><img src="images/132123.jpg" width="130" height="">看不清楚?换一张</a></td>
+		<tr>
+		<td>&nbsp;</td>
+		<td>6-16个字符组成,区分大小写,不能为9位以下纯数字</td>
 	</tr>
-	
+		<tr>
+		<td>密码:&nbsp;&nbsp;</td>
+		<td><input type="password" size="50"></td>
+	</tr>
+		<tr>
+		<td>所在地:&nbsp;&nbsp;</td>
+		<td>
+		<select>
+			<option>中国</option>
+			<option>美国</option>
+			<option>火星</option>
+		</select>
+			
+		<select>
+			<option>北京</option>
+			<option>上海</option>
+			<option>武汉</option>
+		</select>
+			
+		<select>
+			<option>洪山</option>
+			<option>青鸟</option>
+			<option>宜昌</option>
+		</select>
+			
+		</td>
+	</tr>
+		<tr>
+		<td>爱好:&nbsp;&nbsp;</td>
+		<td><input type="checkbox">爬山<input type="checkbox">游泳<input type="checkbox">滑雪<input type="checkbox">上网</td>
+	</tr>
+		<tr>
+		<td>验证码:&nbsp;&nbsp;</td>
+		<td><input type="text" size="50"></td>
+	</tr>
+		<tr>
+		<td>验证图片:&nbsp;&nbsp;</td>
+		<td><input type="image" src="images/veryCode.gif"><a href="#">看不清楚?换张图片</a></td>
+	</tr>
+		<tr>
+			<td>&nbsp;</td>
+			<td>&nbsp;</td>
+		</tr>
 	<tr>
-	<td>&nbsp; &nbsp;</td>
+		<td>&nbsp;</td>
+		<td><input type="submit" value="确定并同意以下服务条款">&nbsp;<input type="reset"></td>
 	</tr>
 	<tr>
-	<td ></td>
-	<td><input type="button" value="确定并同意以下服务条款" > <input type="reset" name="重置" value="重置信息"></td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
 	</tr>
-	
-</table>
-	<br>
-	<center><textarea cols="58" rows="10">为使用腾讯的服务，您应当阅读并遵守《腾讯服务协议》（以下简称“本协议”）和《腾讯隐私政策》。请您务必审慎阅读、充分理解各条款内容，特别是免除或者限制腾讯责任的条款、对用户权利进行限制的条款、约定争议解决方式和司法管辖的条款（如第十八条相关约定）等，以及开通或使用某项服务的单独协议或规则。限制、免责条款或者其他涉及您重大权益的条款可能以加粗、加下划线等形式提示您重点注意。
+	<tr>
+		<td colspan="2" align="center"><textarea cols="58" rows="10">为使用腾讯的服务，您应当阅读并遵守《腾讯服务协议》（以下简称“本协议”）和《腾讯隐私政策》。请您务必审慎阅读、充分理解各条款内容，特别是免除或者限制腾讯责任的条款、对用户权利进行限制的条款、约定争议解决方式和司法管辖的条款（如第十八条相关约定）等，以及开通或使用某项服务的单独协议或规则。限制、免责条款或者其他涉及您重大权益的条款可能以加粗、加下划线等形式提示您重点注意。
 
        除非您已充分阅读、完全理解并接受本协议所有条款，否则您无权使用腾讯服务。您点击“同意”或“下一步”，或您使用腾讯服务，或者以其他任何明示或者默示方式表示接受本协议的，均视为您已阅读并同意签署本协议。本协议即在您与腾讯之间产生法律效力，成为对双方均具有约束力的法律文件。
 
        如果您因年龄、智力等因素而不具有完全民事行为能力，请在法定监护人（以下简称"监护人"）的陪同下阅读和判断是否同意本协议，并特别注意未成年人使用条款。
 
-       如果您是中国大陆地区以外的用户，您订立或履行本协议还需要同时遵守您所属和/或所处国家或地区的法律。 </textarea></center>
+       如果您是中国大陆地区以外的用户，您订立或履行本协议还需要同时遵守您所属和/或所处国家或地区的法律。 </textarea></td>
+	</tr>
+	</form>
+	</table>
+	<br>
+	<table align="center" width="740" border="0" cellpadding="0" cellspacing="0">
+		<tr bgcolor="#F6FBFF">
+			<td align="left">Copyright &copy; 1998-2019 Tencent Inc. All Rights Reserved</td>
+			<td align="right">腾讯公司&nbsp;版权所有</td>
+		</tr>
+	</table>
 </body>
 </html>
